[metadata]
name = yukon
author = UAVCAN Development Team
author_email = nuno.marques@dronesolutions.io
url = https://uavcan.org
description = UAVCAN Next-Gen GUI tools.
long_description = file: README.md
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.md
keywords = uavcan, gui, analysis, tools, 
classifiers =
    Development Status :: 1 - Alpha
    Environment :: Console, Web-interface
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: GUI
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
install_requires=
    pydsdl ~= 1.2
    setuptools

zip_safe = False

python_requires = >=3.5

[options.entry_points]
console_scripts =
    nnvg = yukon.__main__:main

[options.packages.find]
where=src